# cuda-opt-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: softmax.yaml
src/cuda_opt_agent/: __init__.py  cli.py  config.py  interrupts.py  shape_profiles.py  task_spec.py
src/cuda_opt_agent/agent/: __init__.py  graph.py  llm_client.py  nodes.py  state.py  temperatures.py
src/cuda_opt_agent/agent/nodes/: __init__.py  _helpers.py  analyze.py  apply_direct.py  bootstrap.py  compare_library.py  compile_validate.py  decide.py  evaluate.py  hp_search.py  init.py  profile.py  reflect.py  terminate.py
src/cuda_opt_agent/agent/prompts/: analyze.md  apply_method.md  bootstrap.md  decide_method.md  propose_hp.md  reflect_failure.md  reflect_success.md  repair_compile.md
src/cuda_opt_agent/codegen/: __init__.py  normalizer.py  ref_generator.py  verifier.py
src/cuda_opt_agent/memory/: __init__.py  knowledge.py  persistence.py  run_state.py
src/cuda_opt_agent/models/: __init__.py  data.py  enums.py
src/cuda_opt_agent/tools/: __init__.py  benchmark.py  compile.py  correctness.py  hardware.py  profile.py  ref_eval.py  web_search.py
src/cuda_opt_agent/tui/: __init__.py  app.py  live.py  widgets.py
tests/: conftest.py  test_cli_config.py  test_graph_integration.py  test_interrupts.py  test_phase1_models_and_tools.py  test_phase2_persistence.py  test_phase3_api_and_llm.py  test_phase4_hp_and_blacklist.py  test_phase5_knowledge_base.py  test_phase6_tui.py  test_phase7_codegen.py  test_task_spec.py
