[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "cuda-opt-agent"
version = "0.1.0"
description = "LLM-driven CUDA operator optimization agent"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3.25",
    "langgraph>=0.2",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "nvidia-ml-py>=12.0",
    "orjson>=3.10",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.1",
    "numpy>=1.24",
]
search = [
    "exa-py>=2.0",
    "tavily-python>=0.5",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
]

[project.scripts]
cuda-opt = "cuda_opt_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cuda_opt_agent = ["agent/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "gpu: requires GPU",
    "api: requires LLM API key",
]
